// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-masterchain should deploy to the workchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQD2-H7pXiFlv7fIyvn9GRNXDIMeGNM7_5sm7QVpquM3ImDv",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3831n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should deploy to the workchain from masterchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB4GR7QxoLczPfQReBFnohwnNAblXe-53Zyw_ZmpPRd99VZ",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3687n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should deploy to the workchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQB4GR7QxoLczPfQReBFnohwnNAblXe-53Zyw_ZmpPRd99VZ",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3687n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should not deploy to the workchain from masterchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQD2-H7pXiFlv7fIyvn9GRNXDIMeGNM7_5sm7QVpquM3ImDv",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 137,
        "errorMessage": "Masterchain support is not enabled for this contract",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF000000004465706C6F79}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQD2-H7pXiFlv7fIyvn9GRNXDIMeGNM7_5sm7QVpquM3ImDv",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.989",
        },
      },
    ],
  },
]
`;
